--- a/moji_muncher.html
+++ b/moji_muncher.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🌸 Count Kawaii — Word & Character Counter</title>
+  <title>🌸 Moji Muncher — Word & Character Counter</title>
   <meta name="theme-color" content="#ffe6f0" />
   <style>
     :root{
@@ -45,7 +45,7 @@
   </style>
 </head>
 <body>
-  <h1>🌸 Count Kawaii 🌸</h1>
+  <h1>🌸 Moji Muncher 🌸</h1>
   <p class="sub tiny">Live word & character counts — pastel vibes included</p>
 
   <textarea id="textInput" placeholder="Type your cute message here..."></textarea>
@@ -110,4 +110,5 @@
   </script>
 </body>
 </html>
+
 
