--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <section class="editor">
       <div class="textareaWrap" id="wrap">
         <label for="textInput" class="sr-only">Text to analyze</label>
-        <textarea id="textInput" placeholder="Type your cute message here…" spellcheck="true"></textarea>
+        <textarea id="textInput" placeholder="Type your message here…" spellcheck="true"></textarea>
         <div class="placeholder">Tip: paste with <kbd>Ctrl</kbd>/<kbd>⌘</kbd>+<kbd>V</kbd> — counts update instantly</div>
       </div>
     </section>
@@ -255,3 +255,4 @@
   </script>
 </body>
 </html>
+
