--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🌸 Moji Muncher — Word & Character Counter</title>
+  <title> Moji Muncher — Word & Character Counter</title>
   <meta name="theme-color" content="#ffe6f0" />
   <meta name="color-scheme" content="light dark" />
   <style>
@@ -255,4 +255,5 @@
   </script>
 </body>
 </html>
+
 
