--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title> Moji Muncher — Word & Character Counter</title>
+  <title>Free Word & Character Counter — Moji Muncher</title>
+<meta name="description" content="Moji Muncher is a fast, free word and character counter with live reading-time. Type or paste text and get instant counts—no sign-up, no clutter." />
+<link rel="canonical" href="https://your-domain.com/" />
+<meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#ffe6f0" />
   <meta name="color-scheme" content="light dark" />
   <style>
@@ -255,5 +258,6 @@
   </script>
 </body>
 </html>
+
 
 
